# pnnl-tunamelt

./: .gitignore  MANIFEST.in  README.dev.md  README.md  TODO.md  data  env.yml  environment.yaml  environment.yml  pyproject.toml  setup.py
experiments/: 87.json  88.json  best_params.json  no_tracklet_89_params.json  params.json  runtime.txt
experiments/common/: analyze_labels.py  demo_contour_filter.py  demo_denoise_filter.py  demo_denoising_filter.py  demo_findpeaks_filter.py  demo_intensity_filter.py  demo_label_viewer.py  demo_mean_filter.py  demo_nlmeans_filter.py  demo_tracklet_association.py  save_hsv.py
experiments/dft/: ablation.py  best_params.json  calc_turbine_freq.py  demo_all_ac_video.py  demo_dft_ac_video.py  demo_dft_filter.py  demo_dft_sine_video.py  multirun.py  no_tracklet_ablation.py  params.json  profiler_multirun.py  run_dft_filter.py
experiments/optical_flow/: demo_optical_flow.py
experiments/piv/: demo_piv_video.py  test.txt
experiments/sdft/: demo_all_ac_video.py  demo_dft_ac_video.py  demo_dft_sine_video.py
experiments/svd/: demo_svd_vdieo.py
notebooks/: 01-analyze-single-run.ipynb  01-filtering_and_contours.ipynb  01-visualize-results.ipynb  02-analyze-multi-run.ipynb  02-split-test-videos.ipynb  03-dataset-analysis.ipynb  03-dataset-exploration.ipynb  04-analytze-multirun.ipynb  04-analyze-multirun.ipynb  04-performance_versus_size.ipynb  05-results-analysis.ipynb  05-results-exploration.ipynb  05-visualize-pipeline.ipynb  06-visualize-pipeline.ipynb  07-runtime-analysis.ipynb  data  results
scripts/: batch_test_split.py  download_dataset.py  scrub_xml.py  unzip_cvat_labels.py  visualize_labels.py
scripts/experiments/: ablation_no_tracklet.py  ablation_tracklet.py  demo_inference.py  (+2 more)
templates/: index.html
(+74 files in other folders)
